# mesquite

./: .gitignore  CMakeLists.txt  Changelog  GNUmakefile  GNUmakefile.in  LGPL  LGPLinclude.sh  Makefile  Makefile.am  Makefile.any  Makefile.customize  Makefile.customize.in  Makefile.da  Makefile.hp  Makefile.lin  Makefile.sg  Makefile.ss  README  ReleaseNotes.txt  TODO  aclocal.m4  compile.txt  config  configure  configure.ac  configure.in  make.dependencies  mkconfigure  rmCVS.sh
doc/user/: Makefile  Makefile.am  MesquiteUI.eps  README.USERS-GUIDE  ack.tex  api.tex  custom.tex  custom_solver.tex  data.tex  debugging.tex  examples.tex  extend.tex  features.tex  geom.tex  install.tex  intro.tex  mesh.tex  meshqual.eps  meshqual3d.eps  mesquite.bib  min-edge-length.eps  msq-paradigm.eps  opt_strategies.tex  parallel.tex  plan.tex  shest_grid32.eps  solver_post.tex  square_rand.eps  started.tex  support.tex  team.tex  users-guide.tex  wrappers.tex
itaps/: CMakeLists.txt  Makefile.am  MsqIGeom.cpp  MsqIMesh.cpp  MsqIMesh.hpp  MsqIRel.cpp  iGeom.h  iMeshP.h  iRel.h  mkprotos.sh
src/: CMakeLists.txt  Makefile.am  was_Makefile
src/Control/: IQInterface.cpp  IQInterface.hpp  Instruction.cpp  Instruction.hpp  InstructionQueue.cpp  InstructionQueue.hpp  Makefile.am  MakefileTargets.inc  MakefileVariables.inc  Mesquite_InstructionQueue.cpp  Mesquite_TerminationCriterion.cpp  Settings.cpp  Settings.hpp  SlaveBoundaryVertices.cpp  SlaveBoundaryVertices.hpp  StoppingCriterion.cpp  StoppingCriterion.hpp  TerminationCriterion.cpp  TerminationCriterion.hpp  VertexSlaver.hpp
src/MappingFunction/: Makefile.am  MappingFunction.cpp  MappingFunction.hpp  MappingFunctionSet.hpp  NodeSet.cpp  NodeSet.hpp  Sample.cpp  Sample.hpp  SamplePoints.cpp  SamplePoints.hpp
src/Mesh/: ArrayIterator.cpp  ArrayIterator.hpp  ArrayMesh.cpp  ArrayMesh.hpp  CornerTag.cpp  CornerTag.hpp  ElementPatches.cpp  ElementPatches.hpp  ExtraData.cpp  ExtraData.hpp  ExtraDataUser.hpp  GeomTSTT.cpp  GeomTSTT.hpp  GlobalPatch.cpp  GlobalPatch.hpp  IdealElements.cpp  IdealElements.hpp  Makefile.am  MakefileTargets.inc  MakefileVariables.inc  MeshDecorator.cpp  MeshDecorator.hpp  MeshImpl.cpp  MeshImpl.hpp  MeshImplData.cpp  MeshImplData.hpp  MeshImplTags.cpp  MeshImplTags.hpp  MeshSet.cpp  MeshSet.hpp  MeshTSTT.cpp  MeshTSTT.hpp  MeshUtil.cpp  MeshUtil.hpp  MeshWriter.cpp  MeshWriter.hpp  Mesquite_ParallelHelper.cpp  MsqFreeVertexIndexIterator.hpp  MsqIBase.cpp  MsqIBase.hpp  (+33 more)
src/Misc/: Bits.hpp  BoundedCylinderDomain.cpp  BoundedCylinderDomain.hpp  ConicDomain.cpp  ConicDomain.hpp  CylinderDomain.cpp  CylinderDomain.hpp  DomainClassifier.cpp  DomainClassifier.hpp  DomainUtil.cpp  DomainUtil.hpp  EdgeIterator.cpp  EdgeIterator.hpp  Exponent.cpp  Exponent.hpp  FileTokenizer.cpp  FileTokenizer.hpp  Makefile.am  MakefileTargets.inc  MakefileVariables.inc  Matrix3D.hpp  MeshDomain1D.cpp  MeshDomain1D.hpp  MeshTransform.cpp  MeshTransform.hpp  MesquiteError.cpp  MesquiteError.hpp  MesquiteInterrupt.cpp  MesquiteInterrupt.hpp  MesquiteUtilities.cpp  MesquiteUtilities.hpp  MesquiteVersion.cpp  MsqDebug.cpp  MsqDebug.hpp  MsqError.cpp  MsqError.hpp  MsqFPE.cpp  MsqFPE.hpp  MsqGeomPrim.cpp  MsqGeomPrim.hpp  (+31 more)
src/ObjectiveFunction/: CompositeOFAdd.cpp  CompositeOFAdd.hpp  CompositeOFMultiply.cpp  CompositeOFMultiply.hpp  CompositeOFScalarAdd.cpp  CompositeOFScalarAdd.hpp  CompositeOFScalarMultiply.cpp  CompositeOFScalarMultiply.hpp  LInfTemplate.cpp  LInfTemplate.hpp  LPTemplate.cpp  LPTemplate.hpp  LPtoPTemplate.cpp  LPtoPTemplate.hpp  Makefile.am  MakefileTargets.inc  MakefileVariables.inc  MaxTemplate.cpp  MaxTemplate.hpp  MinTemplate.cpp  MinTemplate.hpp  OFEvaluator.cpp  OFEvaluator.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  ObjectiveFunctionTemplate.cpp  ObjectiveFunctionTemplate.hpp  PMeanPTemplate.cpp  PMeanPTemplate.hpp  PatchPowerMeanP.cpp  PatchPowerMeanP.hpp  PowerMeanP.cpp  PowerMeanP.hpp  SqrStdDevTemplate.cpp  SqrStdDevTemplate.hpp  StdDevTemplate.cpp  StdDevTemplate.hpp  VarianceTemplate.cpp  VarianceTemplate.hpp
src/QualityAssessor/: Makefile.am  MakefileTargets.inc  MakefileVariables.inc  QualityAssessor.cpp  QualityAssessor.hpp
src/QualityImprover/: Makefile.am  MakefileTargets.inc  MakefileVariables.inc  Mesquite_VertexMover.cpp  NullImprover.hpp  PatchSetUser.cpp  PatchSetUser.hpp  QualityImprover.cpp  QualityImprover.hpp  VertexMover.cpp  VertexMover.hpp
src/QualityMetric/: AddQualityMetric.cpp  AddQualityMetric.hpp  AveragingQM.cpp  AveragingQM.hpp  CompositeQualityMetric.hpp  EdgeQM.cpp  EdgeQM.hpp  ElemSampleQM.cpp  ElemSampleQM.hpp  ElementAvgQM.cpp  ElementAvgQM.hpp  ElementMaxQM.cpp  ElementMaxQM.hpp  ElementPMeanP.cpp  ElementPMeanP.hpp  ElementQM.cpp  ElementQM.hpp  Makefile.am  MakefileTargets.inc  MakefileVariables.inc  MultiplyQualityMetric.cpp  MultiplyQualityMetric.hpp  NumericalQM.cpp  NumericalQM.hpp  PMeanPMetric.cpp  PMeanPMetric.hpp  PowerQualityMetric.cpp  PowerQualityMetric.hpp  QualityMetric.cpp  QualityMetric.hpp  ScalarAddQualityMetric.cpp  ScalarAddQualityMetric.hpp  ScalarMultiplyQualityMetric.cpp  ScalarMultiplyQualityMetric.hpp  VertexMaxQM.cpp  VertexMaxQM.hpp  VertexPMeanP.cpp  VertexPMeanP.hpp  VertexQM.cpp  VertexQM.hpp
src/TargetCalculator/: AspectFactor.cpp  AspectFactor.hpp  CachingTargetCalculator.cpp  CachingTargetCalculator.hpp  ConcreteTargetCalculators.hpp  DefaultCornerTarget.cpp  DefaultCornerTarget.hpp  DefaultTargetCalculator.hpp  IdealCornerTarget.cpp  IdealCornerTarget.hpp  IdealShapeTarget.cpp  IdealShapeTarget.hpp  IdealTargetCalculator.cpp  IdealTargetCalculator.hpp  IdentityTarget.cpp  IdentityTarget.hpp  InverseMetricWeight.cpp  InverseMetricWeight.hpp  JacobianCalculator.cpp  Makefile.am  (+48 more)
testSuite/: CMakeLists.txt  Makefile.am  env.in  mailer  nightly
tstt/: Makefile.am  Makefile.inc  TSTT.sidl  TSTTB.sidl  TSTTG.sidl  TSTTM.sidl  TSTTR.sidl
utils/: CLArgFlag.cpp  CLArgFlag.hpp  CLArgs.cpp  CLArgs.hpp  CMakeLists.txt  Makefile.am  ManPage.cpp  ManPage.hpp  domain.cpp  domain.hpp  quality.cpp  randomize.cpp  shape-improve.cpp  transform.cpp
(+1010 files in other folders)
