AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
LIBTOOL = @LIBTOOL@ @MSQ_LIBTOOL_FLAGS@

SUBDIRS = . doc testSuite
DIST_SUBDIRS = $(SUBDIRS) meshFiles
EXTRA_DIST = lgpl.txt mkconfigure

BUILT_SOURCES = include/Mesquite_all_headers.hpp
MSQ_SRCS=
MSQ_HDRS=
MSQ_INCLUDES =
lib_LTLIBRARIES = libmesquite.la
libmesquite_la_DEPENDENCIES=

include src/Mesh/Makefile.am
include src/Control/Makefile.am
include src/Control/Wrappers/Makefile.am
include src/MappingFunction/Makefile.am
include src/MappingFunction/Lagrange/Makefile.am
include src/MappingFunction/Linear/Makefile.am
include src/Misc/Makefile.am
include src/ObjectiveFunction/Makefile.am
include src/QualityAssessor/Makefile.am
include src/QualityImprover/Makefile.am
include src/QualityImprover/TopologyModifier/Makefile.am
include src/QualityImprover/VertexMover/Makefile.am
include src/QualityImprover/VertexMover/ConjugateGradient/Makefile.am
include src/QualityImprover/VertexMover/LaplacianSmoothers/Makefile.am
include src/QualityImprover/VertexMover/SteepestDescent/Makefile.am
include src/QualityImprover/VertexMover/NonSmoothSteepestDescent/Makefile.am
include src/QualityImprover/VertexMover/FeasibleNewton/Makefile.am
include src/QualityImprover/VertexMover/Randomize/Makefile.am
include src/QualityMetric/Makefile.am
include src/QualityMetric/DFT/Makefile.am
include src/QualityMetric/Shape/Makefile.am
include src/QualityMetric/Smoothness/Makefile.am
include src/QualityMetric/Jacobian/Makefile.am
include src/QualityMetric/Jacobian/2D/Makefile.am
include src/QualityMetric/Jacobian/3D/Makefile.am
include src/QualityMetric/Untangle/Makefile.am
include src/QualityMetric/Volume/Makefile.am
include src/TargetCalculator/Makefile.am
include tstt/Makefile.am

libmesquite_la_includedir = $(includedir)
libmesquite_la_SOURCES = $(MSQ_SRCS)
libmesquite_la_include_HEADERS = include/Mesquite.hpp \
                                 include/Mesquite_all_headers.hpp \
                                 $(top_builddir)/include/mesquite_config.h \
                                 include/MeshInterface.hpp \
                                 $(MSQ_HDRS)
libmesquite_la_LIBADD = $(MESQUITE_LIBS)
AM_CPPFLAGS += -Iinclude -I$(top_srcdir)/include $(MSQ_INCLUDES)

include/Mesquite_all_headers.hpp: $(MSQ_HDRS)
	@echo "Generating $@..."
	@echo '/* NOTE: This file is generated by make.' > $@
	@echo ' *       Do not manually edit it.'       >> $@
	@echo ' */'                                     >> $@
	@echo '#ifndef MESQUITE_ALL_HEADERS_HPP'        >> $@
	@echo '#define MESQUITE_ALL_HEADERS_HPP'        >> $@
	@echo '#include "Mesquite.hpp"'                 >> $@
	@echo '#include "MeshInterface.hpp"'            >> $@ 
	@for file in $(MSQ_HDRS); do \
	   n=`expr X"$$file" : X"src/.*/\([^/]*\)"`;\
	   echo "#include \"$$n\"" >> $@; \
	done
	@echo '#endif'                                  >> $@ 

$(RECURSIVE_TARGETS) distdir: testSuite/cppflags.make
testSuite/cppflags.make: $(MSQ_HDRS)
	@echo "Generating $@..."
	@echo "INCLUDES = -I\$$(top_srcdir)/include \\"    > $@
	@for flag in $(MSQ_INCLUDES); do \
	  n=`expr X"$$flag" : X"-I$(srcdir)/src/\(.*\)" || true`; \
	  if test "x$$n" != "x"; then \
	    echo "	-I\$$(top_srcdir)/src/$$n \\"     >> $@ ; \
 	  else \
	    n=`expr X"$$flag" : X"-I$(top_builddir)/tstt/\(.*\)" || true`; \
	    if test "x$$n" != "x"; then \
	      echo "	-I\$$(top_builddir)/tstt/$$n \\"  >> $@ ; \
 	    fi ; \
	  fi ; \
	done
	@echo "	-I\$$(top_builddir)/include \\"           >> $@ 
	@echo "	-I\$$(top_builddir)/testSuite"            >> $@

MOSTLYCLEANFILES = include/Mesquite_all_headers.hpp 
DISTCLEANFILES = testSuite/cppflags.make
